css/main.css
/* ==========================================================================
   Author's custom styles
   ========================================================================== */

/* iPhone */
@media (max-width: 420px), (-webkit-max-device-pixel-ratio: 1), (max-resolution: 163dpi) {
	html{
		background: url(../img/bgSmall.jpg) no-repeat center center fixed;
	}
}

@media (min-width: 421px) {
	html{
		background: url(../img/bg.jpg) no-repeat center center fixed;
	}
}

html { 
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	height: 100%;
}

body {
	background: transparent;
	padding: 0;
	height: 100%;
	font-family: 'Helvetica Nueue', 'Helvetica', serif;
	color: white;
}

.main {
	width: 438px;
	margin: 0 auto;
	overflow-x: hidden;
	height: 100%;
}

/* ~iPhone */
@media (max-width: 487px) {
	.main {
		max-width: 90%;
		margin: 0 auto;
	}
}

@media (min-width: 1000px) {
	.main {
		margin: 0 auto 0 30%;
	}
}

/*@media (max-width: @screen-phone-max) { ... }
@media (min-width: @screen-sm) and (max-width: @screen-sm-max) { ... }
@media (min-width: @screen-md) and (max-width: @screen-md-max) { ... }
@media (min-width: @screen-lg) { ... }*/

#header {
	width: 100%;
	padding-left: 0;
	padding-right: 0;
	padding-bottom: 0;
	background: none;
	text-shadow: 1px 1px rgba(0, 0, 0, 0.6);
	text-align: left;
}

#header h1 {
	font-size: 42px;
}

/* iPhone */
@media (max-width: 320px) {
	#header h1 {
		font-size: 33px;
	}
}

/* < iPhone */
@media (max-width: 240px) {
	#header h1 {
		font-size: 70%;
	}
}

.logo {
	background-repeat: no-repeat;
	background-position: top left;
	width: 303px;
	height: 91px;
	display: block;
}

/* iPhone */
@media (max-width: 320px), (-webkit-max-device-pixel-ratio: 1), (max-resolution: 163dpi) {
	.logo{
		background-image: url(../img/logoSmall.png);
		background-size: contain;
		max-width: 75%;
	}
}

@media (min-width: 421px), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 163dpi) {
	.logo{
		background-image: url(../img/logo.png);
		background-size: contain;
		max-width: 75%;
	}
}

#submitter {
	float: none;
	display: block;
	margin: 0 auto;
	border-radius: 8px;
	box-sizing: border-box;
	text-align: left;
	color: white;
	position: relative;
}

#submissionForm, #confirmation {
	position: absolute;
	top: 0;
	width: 100%;
}

h2 {
	text-align: left;
	text-shadow: 1px 1px rgba(0, 0, 0, 0.6);
	font-weight: normal;
}

/* iPhone */
@media (max-width: 320px) {
	h2 {
		font-size: 18px;
		margin-top: 0;
	}
}

/* > iPhone */
@media (min-width: 421px) {
	h2 {
		margin-bottom: 20px;
		font-size: 34px;
	}
}

.fbConnect {
	width: 100%;
	border-radius: 0;
	height: 43px;
	background-image: url('../img/taptappitytaptap.png') !important;
	background-size: 16px;
	background-position: 93% 50%;
	background-repeat: no-repeat;
	text-align: left;
	padding-left: 26px;
	font-family: 'amblebold';
}

/* < iPhone */
@media (max-width: 230px) {
	.fbConnect {
		background-image: none;
		text-align: center;
	}
}

/* > iPhone */
@media (min-width: 421px) {
	.fbConnect {
		background-size: 32px;
		font-size: 32px;
		height: 75px;
	}
}

.orSeparator {
	font-size: 12px;
	text-align: center;
	margin: 10px 0;
	font-weight: normal;
}

/* > iPhone */
@media (min-width: 421px) {
	.orSeparator {
		font-size: 25px;
	}
}

.orBg {
	background-color: #333333;
	background-color:rgba(0, 0, 0, 0.4);
	border-radius: 15px;
	padding: 3px 6px 5px 6px;
}

/* > iPhone */
@media (min-width: 421px) {
	.orBg {
		border-radius: 35px;
		padding: 3px 8px 5px 8px;
	}
}

#emailForm {
	height: 75px;
}

.form-group {
	margin: 0;
	width: 70%;
	float: left;
}

#formEmail {
	height: 43px;
	font-family: 'ambleregular';
}

#formEmail::-webkit-input-placeholder {
   color: #d8d7d7;
}

#formEmail:-moz-placeholder { /* Firefox 18- */
   color: #d8d7d7;  
}

#formEmail::-moz-placeholder {  /* Firefox 19+ */
   color: #d8d7d7;  
}

#formEmail:-ms-input-placeholder {  
   color: #d8d7d7;  
}

#formSubmit {
	width: 30%;
	float: left;
	height: 43px;
	font-family: 'amblebold';
}

#formEmail, #formSubmit {
	border-radius: 0;
	text-align: center;
}

@media (min-width: 421px) {
	#formEmail, #formSubmit {
		height: 75px;
		font-size: 25px;
	}
}

@media (min-width: 421px) {
	.reset {
		font-size: 20px;
	}
}

